Using batch mapping instead of schema mapping for getting authors